--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@
 
 :root {
   --primary: #2A7AE4;
-  --black: #000000;
+  --black: black;
   --blackLighter: #9E9E9E;
   --grayLight: #F5F5F5;
-  --grayMedium: #e5e5e5; 
-  --white: #FFFFFF;
+  --grayMedium: #E5E5E5;
+  --grayDark: #141414;
+  --white: white;
   --frontEnd: #6BD1FF;
   --backEnd: #00C86F;
 }
@@ -22,4 +23,10 @@ body {
 
 a {
   color: inherit;
-} 
+}
+
+#root {
+  min-height: calc(100vh - var(--bodyPaddingTop));
+  display: flex;
+  flex-direction: column;
+}
